Thu Jun 24 11:42:19 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/idl/ccm_dds.idl:
        * connectors/dds4ccm/impl/Coherent_Changes_Guard.h:
        * connectors/dds4ccm/impl/Coherent_Changes_Guard.cpp:
        * connectors/dds4ccm/impl/ContentFilterSetting.h:
        * connectors/dds4ccm/impl/ContentFilterSetting.cpp:
        * connectors/dds4ccm/impl/ContentFilteredTopic_T.h:
        * connectors/dds4ccm/impl/ContentFilteredTopic_T.cpp:
        * connectors/dds4ccm/impl/DDSCallbackStatusHandler.h:
        * connectors/dds4ccm/impl/DDSCallbackStatusHandler.cpp:
        * connectors/dds4ccm/impl/DDSDataReaderListener_T.h:
        * connectors/dds4ccm/impl/DDSDataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/DDSDataWriterListener_T.h:
        * connectors/dds4ccm/impl/DDSDataWriterListener_T.cpp:
        * connectors/dds4ccm/impl/DDSPublisherListener_T.h:
        * connectors/dds4ccm/impl/DDSPublisherListener_T.cpp:
        * connectors/dds4ccm/impl/DDSSubscriberListener_T.h:
        * connectors/dds4ccm/impl/DDSSubscriberListener_T.cpp:
        * connectors/dds4ccm/impl/DDSTopicListener_T.h:
        * connectors/dds4ccm/impl/DDSTopicListener_T.cpp:
        * connectors/dds4ccm/impl/DDS_Base_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Event_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Get_T.h:
        * connectors/dds4ccm/impl/DDS_Get_T.cpp:
        * connectors/dds4ccm/impl/DDS_Listen_T.h:
        * connectors/dds4ccm/impl/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/DDS_Read_T.h:
        * connectors/dds4ccm/impl/DDS_Read_T.cpp:
        * connectors/dds4ccm/impl/DDS_StateListen_T.h:
        * connectors/dds4ccm/impl/DDS_StateListen_T.cpp:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.cpp: